name:                pitch-graph
version:             0.1.0.0
synopsis:            Tool to measure and display pitch of the recording sound in real time
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Mihaly Barasz
maintainer:          klao@nilcons.com
-- copyright:
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pitch-graph
  main-is:             Main.hs
  other-modules:
    PitchGraph.Chart,
    PitchGraph.Sound
  -- other-extensions:
  hs-source-dirs:      src
  ghc-options:         -Wall -O -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
    base               >= 4.8  &&  < 4.9,
    bytestring,
    Chart,
    Chart-cairo,
    lens,
    data-default,
    dywapitchtrack     >= 0.1  &&  < 0.2,
    gtk,
    pulse-simple       >= 0.1  &&  < 0.2,
    stm,
    transformers,
    unix
